# redpill

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  config.example.yaml  pyproject.toml  smoke_test.py  v3.md
docs/: ARCHITECTURE.md  architecture.drawio
feedback/: db.py  models.py  server.py
feedback/templates/: base.html  bookmarks.html  digest.html  history.html  index.html
redpill/: animus.py  bandit.py  config.py  dedup.py  deliver.py  extract.py  feedback_reader.py  llm_utils.py  main.py  query_planner.py  registry.py  search.py  search_providers.py  state.py  summarize.py  term_extractor.py  viz.py
scripts/: smoke_test_bandit.py  smoke_test_email.py  smoke_test_search.py
sisyphus/: run_animus.sh  run_pipeline.sh  start_feedback.sh
tests/: test_config.py  test_dedup.py  test_deliver.py  test_extract.py  test_main.py  test_planner_llm_client.py  test_query_planner.py  test_query_planner_v3.py  test_search.py  test_search_providers.py  test_state.py  test_state_research_plans.py  test_state_v2.py  test_summarize.py  test_term_extractor.py
