[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redpill"
version = "0.1.0"
description = "Daily AI-powered research digest agent"
requires-python = ">=3.11"
dependencies = [
    "tavily-python",
    "trafilatura",
    "sentence-transformers",
    "ollama",
    "pyyaml",
    "python-dotenv",
    "numpy",
    "markdown",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]
feedback = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
]

[project.scripts]
redpill = "redpill.main:cli"
redpill-feedback = "feedback.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["redpill*", "feedback*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
